--- a/src/app/offerings/service-details/service-details.component.html
+++ b/src/app/offerings/service-details/service-details.component.html
@@ -1,5 +1,49 @@
-<div *ngIf="service" id="service-details">
-  <h3>Showing service details for service with id: {{service.id}}. :)</h3>
-  <h4>{{service.name}}</h4>
-  <p>{{service.description}}</p>
-</div>
+<article>
+  <h2> {{ service.name }} </h2>
+  <p> {{ service.description }} </p>
+
+  <dl>
+    <dt>Category:</dt>
+    <dd>
+      <details>
+        <summary> {{ service.category.name }} </summary>
+        {{ service.category.description }}
+      </details>
+    </dd>
+
+    <dt>Specificities:</dt>
+    <dd> {{ service.specificities }} </dd>
+
+    <dt>Applicable event types:</dt>
+    <dd>
+      <ul>
+        <li *ngFor="let type of service.applicableEventTypes"> {{ type.name }} </li>
+      </ul>
+    </dd>
+
+    <dt>Price:</dt>
+    <dd>
+      <span [ngStyle]="service.discount > 0 ? {'text-decoration': 'line-through', 'font-style': 'italic'} : null">
+        {{ service.price | currency }}
+      </span>
+      <b *ngIf="service.discount > 0">
+        {{ service.price * (1 - service.discount) | currency}} ({{ service.discount | percent }} off)
+      </b>
+    </dd>
+
+    <dt>Reservation details:</dt>
+    <dd>
+      Reservations for this service must be made {{-1}} days in advance, and may be canceled up to {{-1}} days before.
+      {{
+        service.sessionDuration ?
+          'Session duration for this service is ' + -1 + ' minutes.'
+          : 'This service may be reserved for at least ' + -1 + ' minutes, and up to ' + -1 + ' minutes.'
+      }}
+      {{
+        service.reservationPolicy === 'manual' ?
+          'The provider must review reservations before accepting them.'
+          : 'Your reservation will be immediately accepted.'
+      }}
+    </dd>
+  </dl>
+</article>
